# gazebo_files_mbzirc_2

./: README.md  mavros_posix_sitl.launch
simulation_mbzirc_release/: CMakeLists.txt  package.xml
simulation_mbzirc_release/launch/: ch1_arena.launch  ch2_arena.launch  ch3_arena.launch  empty_world.launch
simulation_mbzirc_release/models/mbzirc_basebox/: model.config
simulation_mbzirc_release/models/mbzirc_block_50/: model.config
simulation_mbzirc_release/models/mbzirc_box_orange/: model.sdf
simulation_mbzirc_release/models/mbzirc_box_red/: model.config  model.sdf
simulation_mbzirc_release/models/mbzirc_building/: CH3_building.stl  model.config  model.sdf
simulation_mbzirc_release/models/mbzirc_column/: model.config  model.sdf
simulation_mbzirc_release/models/mbzirc_plane/: model.sdf
simulation_mbzirc_release/models/mbzirc_plane/materials/scripts/: asphalt.material
simulation_mbzirc_release/models/mbzirc_roof_40/: model.sdf
simulation_mbzirc_release/models/mbzirc_roof_50/: model.config  model.sdf
simulation_mbzirc_release/models/mbzirc_roof_60/: model.config
simulation_mbzirc_release/models/mbzirc_stand_10/: model.config
simulation_mbzirc_release/models/mbzirc_stand_14/: model.config
simulation_mbzirc_release/models/mbzirc_stand_6/: model.config
simulation_mbzirc_release/models/mbzirc_uav_channel_2/: model.sdf
simulation_mbzirc_release/models/mbzirc_uav_wall/: model.config
simulation_mbzirc_release/models/mbzirc_ugv_wall/: model.config
simulation_mbzirc_release/worlds/: mbzirc_ch1.world  mbzirc_ch2.world  mbzirc_ch3.world
(+68 files in other folders)
