<?xml version="1.0"?>
<package format="2">
  <name>simulation_mbzirc</name>
  <version>0.0.0</version>
  <description>MBZIRC 2020 Simulation Arena</description>

  <maintainer email="hslee89@kaist.ac.kr">Hanseob Lee</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
